--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
          <div class="top-bar-right">
            <ul class="menu simple vertical medium-horizontal">
              <li><a href="#">MOTOR YACHTS</a></li>
-             <li><a href="index.html#!/sportfish">SPORTFISH</a></li>
+             <li><a href="index.html#!/frontdoor">frontdoor</a></li>
              <li><a href="index.html#!/experience">EXPERIENCE</a></li>
              <li><a href="index.html#!/request">REQUEST</a></li>
              <li><a href="index.html#!/story">OUR STORY</a></li>
              <li><a href="index.html#!/dealer">FIND A DEALER</a></li>
+             <li><a href="index.html#!/adam">adam</a></li>
              <li>
                <button type="button" class="button hollow topbar-responsive-button">INVENTORY</button>
              </li>
